--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint *.js **/*.js",
+    "lint:fix": "eslint *.js **/*.js --fix"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
@@ -29,7 +31,13 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "~25.2.6",
+    "eslint": "^7.8.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
     "jest": "~25.2.6",
     "react-test-renderer": "~16.11.0"
   },
