--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint *.js **/*.js",
-    "lint:fix": "eslint *.js **/*.js --fix"
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
