--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "~0.62.2",
     "react-native-action-button": "^2.8.5",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-i18n": "^2.0.15",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.9.0",
