--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "react-native-screens": "^2.9.0",
     "react-native-unimodules": "~0.10.1",
     "react-native-vector-icons": "^7.0.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -45,10 +49,11 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "jest": "~25.2.6",
+    "metro-react-native-babel-preset": "^0.63.0",
     "react-test-renderer": "~16.11.0"
   },
   "jest": {
     "preset": "react-native"
   },
-  "private": true
+  "private": false
 }
