--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "expo-status-bar": "^1.0.0",
     "expo-updates": "~0.2.10",
     "formik": "^2.1.5",
+    "i18next": "^19.7.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
+    "react-i18next": "^11.7.2",
     "react-native": "~0.62.2",
     "react-native-action-button": "^2.8.5",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-i18n": "^2.0.15",
     "react-native-keyboard-aware-scroll-view": "^0.9.2",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.9.0",
